--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,9 @@
-@import 'variables';
-@import 'mixins';
-@import 'animations';
-@import 'base';
-@import 'header';
-@import 'footer';
-@import 'cards';
-@import 'buttons';
+@use 'variables' as *;
+@use 'mixins' as mix;
+@use 'sass:color';
+@use 'animations';
+@use 'base';
+@use 'header';
+@use 'footer';
+@use 'cards';
+@use 'buttons';
