--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,6 @@
+@use 'variables' as *;
+@use 'sass:color';
+
 @mixin card-style {
     border: none;
     border-radius: 15px;
@@ -18,6 +21,6 @@
     transition: $transition;
   
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: color.adjust($primary-color, $lightness: -10%);
     }
   }
