--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -1,27 +1,27 @@
 @keyframes fadeIn {
-    from {
+  from {
       opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
   }
-  
-  @keyframes slideIn {
-    from {
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
       transform: translateY(20px);
       opacity: 0;
-    }
-    to {
+  }
+  to {
       transform: translateY(0);
       opacity: 1;
-    }
   }
-  
-  .fade-in {
-    animation: fadeIn 1s ease-in-out;
-  }
-  
-  .slide-in {
-    animation: slideIn 0.8s ease-in-out;
-  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in;
+}
+
+.slide-in {
+  animation: slideIn 0.5s ease-out;
+}
