--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,9 @@
-@use 'variables';
-@use 'mixins';
+@use 'variables' as *;
+@use 'mixins' as mix;
+@use 'sass:color';
 @use 'animations';
 @use 'base';
 @use 'header';
 @use 'footer';
-@use 'sections';
-@use 'forms';
+@use 'cards';
+@use 'buttons';
