--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,31 +1,26 @@
-@use 'variables' as v;
-@use 'mixins' as m; 
-@use 'sass:color';
-
+@use 'variables' as *;
+@use 'mixins' as mix;
 
 header {
-    background-color: v.$primary-color;
-
-  color: v.$white;
-  padding: v.$padding;
-  text-align: center;
-
-  nav {
-      @include m.flex-center;
-
-      a {
-          color: v.$white;
-          margin: 0 15px;
-          @include m.transition(color);
-
-          &:hover {
-            color: v.$white;
-            background-color: color.adjust(v.$primary-color, $lightness: -10%);
-          }
+    background-color: $header-bg;
+    box-shadow: $shadow;
+  
+    h1 {
+      font-size: $font-size-large;
+      color: $secondary-color;
+    }
+  
+    .navbar {
+      background-color: $header-bg;
+    }
+  
+    .nav-link {
+      color: $secondary-color !important;
+      font-weight: bold;
+      transition: $transition;
+  
+      &:hover {
+        color: $primary-color !important;
       }
+    }
   }
-
-  h1 {
-      margin-bottom: v.$margin;
-  }
-}
