--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ footer .footerNav a:hover {
 footer .redes img {
   margin: 0 5px;
   transition: all 0.3s ease-in-out;
+  filter: invert(1); 
 }
 footer .redes img:hover {
   transform: scale(1.1);
